gcc/testsuite/rust/rustc/ui/const-generics/issues/issue-90364_dg.rs
#![feature(generic_const_exprs)]
#![allow(incomplete_features)]

pub struct Foo<T, const H: T>(T)
// { dg-error ".E0770." "" { target *-*-* } .-1 }
where
    [(); 1]:;

fn main() {}

